create post endpoint for hook-challenge and deploy

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "main.js",
   "scripts": {
     "dev": "nodemon src/main.ts",
+    "start": "node dist/main.js",
     "build": "tsc --project ."
   },
   "author": "",
